kustomizations/monitoring/kite/server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kite
  namespace: monitoring
  labels:
    app.kubernetes.io/name: kite
    tier: disposable
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: kite
  template:
    metadata:
      labels:
        app.kubernetes.io/name: kite
    spec:
      serviceAccountName: kite
      containers:
        - name: kite
          image: ghcr.io/kite-org/kite:v0.16.0
          imagePullPolicy: Always
          ports:
          - name: http
            containerPort: 8080
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 5
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              cpu: 100m
              memory: 512Mi
          volumeMounts:
          - name: config-volume
            mountPath: /app/config.yaml
            subPath: config.yaml
      volumes:
      - name: config-volume
        configMap:
          name: kite-config
          items:
            - key: config.yaml
              path: config.yaml
