kustomizations/monitoring/kite/server-svc.yaml
kind: Service
apiVersion: v1
metadata:
  name: kite
  namespace: monitoring
spec:
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: http
  selector:
    app.kubernetes.io/name: kite
  type: ClusterIP
